--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
+		"@babel/plugin-proposal-private-property-in-object": "^1.40.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"framer-motion": "4.1.17",
@@ -16,7 +17,8 @@
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.4",
 		"styled-components": "^5.3.3",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		
 	},
 	"scripts": {
 		"start": "react-scripts --openssl-legacy-provider start",
