--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.4",
 		"styled-components": "^5.3.3",
-		"web-vitals": "^1.0.1",
-		
+		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
 		"start": "react-scripts --openssl-legacy-provider start",
